<resources>
    <string name="app_name">Feckless</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="run">Run</string>
    <string name="pause">Pause</string>
    <string name="sub_hour">- Hour</string>
    <string name="sub_min">- Min</string>
    <string name="add_min">+ Min</string>
    <string name="add_hour">+ Hour</string>
    <string name="title_activity_day">DayActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="timer">Timer</string>
    <string name="total">total</string>
</resources>
