<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alexlowe.feckless.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="82sp" />

    <Button
        android:id="@+id/run_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/time_view"
        android:layout_marginTop="20dp"
        android:onClick="onClickRun"
        android:text="@string/start" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/run_button"

        android:orientation="horizontal">

        <Button
            android:id="@+id/sub_hr_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:onClick="subHour"
            android:text="@string/sub_hour" />

        <Button
            android:id="@+id/sub_min_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:onClick="subMin"
            android:text="@string/sub_min" />

        <Button
            android:id="@+id/add_min_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:onClick="addMin"
            android:text="@string/add_min" />

        <Button
            android:id="@+id/add_hr_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:onClick="addHour"
            android:text="@string/add_hour" />

    </LinearLayout>


    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/buttonPanel"

        android:onClick="onClickReset"
        android:text="@string/reset" />


</RelativeLayout>
