<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main_Activity"
    tools:showIn="@layout/activity_main">


    <com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout
        android:id="@+id/fabtoolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:showDuration="600"
        app:hideDuration="200"
        app:horizontalMargin="10dp"
        app:verticalMargin="10dp"
        app:fadeInFraction="0.2"
        app:fabId="@+id/fabtoolbar_fab"
        app:containerId="@+id/fabtoolbar_container"
        app:fabToolbarId="@+id/fabtoolbar_toolbar">

        <TextView
            android:id="@+id/time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text=""
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="82sp" />

        <Button
            android:id="@+id/run_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/time_view"
            android:layout_marginTop="20dp"
            android:text="@string/start" />

        <LinearLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/run_button"

            android:orientation="horizontal">

            <Button
                android:id="@+id/sub_hr_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="56dp"
                android:text="@string/sub_hour" />

            <Button
                android:id="@+id/sub_min_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="56dp"
                android:text="@string/sub_min" />

            <Button
                android:id="@+id/add_min_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="56dp"
                android:text="@string/add_min" />

            <Button
                android:id="@+id/add_hr_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="56dp"
                android:text="@string/add_hour" />

        </LinearLayout>


        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/buttonPanel"
            android:text="@string/reset"/>

        <RelativeLayout
            android:id="@id/fabtoolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.FloatingActionButton
                android:id="@id/fabtoolbar_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="normal"
                app:borderWidth="0dp"
                android:src="@drawable/ic_save_white_48dp"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@id/fabtoolbar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="16dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@drawable/textview_selector"
                android:text="Mo"
                />

            <TextView
                android:id="@+id/tu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@drawable/textview_selector"
                android:text="Tu"
                />
            <TextView
                android:id="@+id/we"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@drawable/textview_selector"
                android:text="We"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/th"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@drawable/textview_selector"
                android:text="Th"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/fr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@drawable/textview_selector"
                android:text="Fr"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/sa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@drawable/textview_selector"
                android:text="Sa"
                />

            <TextView
                android:id="@+id/su"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@drawable/textview_selector"
                android:text="Su"
                />
            <ImageView
                android:id="@+id/x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_arrow_forward_white_48dp"/>

        </LinearLayout>

    </com.github.fafaldo.fabtoolbar.widget.FABToolbarLayout>



</RelativeLayout>